# scortch

./: .gitmodules  README.md  meson.build  meson_options.txt
examples/: meson.build
examples/cpp/: meson.build  predict-words.cpp
scortch/: local-tensor.cpp  local-tensor.h  meson.build  scortch-errors.cpp  scortch-errors.h
tests/: meson.build
tests/js/: meson.build
tests/js/scortch/: meson.build  testLocalTensor.js
tests/scortch/: local-tensor-test.cpp  meson.build
